--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ html {
 body {
   overflow: auto;
   height: 100vh;
-  background: aqua;
+  background: black;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
